--- a/index.html
+++ b/index.html
@@ -1,1 +1,435 @@
-hi
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <!-- SEO 시작 -->
+    <title>Jin &#39;s Portfolio </title>
+    <meta name="description" content="web/app software engineer" />
+    <meta name="author" content="Jin Home" />
+    <link rel="shortcut icon" href="images/favicon.ico" type="image/x-icon" />
+
+    <!-- OG (Open Graph Data) 시작 -->
+    <meta property="og:title" content="jin의 폴트폴리오" />
+    <meta property="og:type" content="website" />
+    <meta property="og:url" content="배포후 생성된 URL" />
+    <meta property="og:image" content="배포후 생성된 이미지 URL" />
+
+    <!-- google font 시작 (Roboto 적용)-->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap" rel="stylesheet">
+
+    <!-- CSS 시작 -->
+    <link href="./css/style.css" rel="stylesheet">
+    <link href="./css/main_home.css" rel="stylesheet">
+    <link href="./css/common.css" rel="stylesheet">
+    <link href="./css/about.css" rel="stylesheet">
+    <link href="./css/skills.css" rel="stylesheet">
+    <link href="./css/work.css" rel="stylesheet">
+    <link href="./css/testimonial.css" rel="stylesheet">
+    <link href="./css/top.css" rel="stylesheet">
+    <link href="./css/footer.css" rel="stylesheet">
+    <link href="./css/media_768.css" rel="stylesheet">
+
+
+    <!-- Javascript 시작 -->
+    <script type="module" src="./js/main_01.js" defer> </script>
+    <script type="module" src="./js/main_02.js" defer> </script>
+    <script type="module" src="./js/main_03.js" defer> </script>
+    <script type="module" src="./js/main_04.js" defer> </script>
+    <script type="module" src="./js/main_05.js" defer> </script>
+
+
+
+    <!-- google 폰트 -->
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
+
+    <!-- awesome 폰트 -->
+    <script src="https://kit.fontawesome.com/cbcad42a26.js" crossorigin="anonymous"></script>
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.13.0/css/all.min.css" rel="stylesheet"> 
+
+</head>
+<body>
+ 
+    <!-- Header 시작 -->
+    <header class="header">
+        <div class="header_logo">
+            <img class="header_logo_img" src="./images/favicon.ico" alt="logo" width="34"/>
+            <h1 class="header_logo_title"> 
+                <a href="#"> Jin </a>
+            </h1>
+        </div>
+        <nav class="header_nav">
+            <ul class="header_menu">
+                <li><a class="header_menu_item active" href="#home"> Home </a></li>
+                <li><a class="header_menu_item" href="#about"> About </a></li>
+                <li><a class="header_menu_item" href="#skills"> Skills </a></li>
+                <li><a class="header_menu_item" href="#work"> My Work </a></li>
+                <li><a class="header_menu_item" href="#testimonial"> Testimonial </a></li>
+                <li><a class="header_menu_item" href="#contact"> Contact </a></li>
+            </ul>
+        </nav>
+
+        <div class="hamburger"> 
+            <span class="material-symbols-outlined">
+                menu
+            </span>
+        </div>
+    </header>
+
+    <!-- main 시작 -->
+    <main>
+        <!-- Home 시작-->
+        <section id="home" class="section_style">
+            <div class="home_container">
+                <img class="home_avatar" src="./images/pro_img_circle.png" alt="jin's images" width="250">
+                <h2 class="section_title">
+                    Hello <br />
+                    I &#39;m <strong class="home_title-strong"> Web Engineer </strong>, Jin 
+                
+                </h2>
+                <p class="section_description"> A software engineer </p>
+                <a class="section_contact" href="#contact"> Contect Me </a>
+            </div>
+
+
+
+            <div class="custom-shape-divider-bottom-1692632808">
+                <svg data-name="Layer 1" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 1200 120" preserveAspectRatio="none">
+                    <path d="M985.66,92.83C906.67,72,823.78,31,743.84,14.19c-82.26-17.34-168.06-16.33-250.45.39-57.84,11.73-114,31.07-172,41.86A600.21,600.21,0,0,1,0,27.35V120H1200V95.8C1132.19,118.92,1055.71,111.31,985.66,92.83Z" class="shape-fill"></path>
+                </svg>
+            </div>
+
+
+        </section>
+
+        <!-- About 시작 -->
+        <section id="about" class="section_style max-container">
+            <h2> About me </h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur 
+                adipisicing elit. In sint, officia 
+                nesciunt possimus accusantium quo. 
+                Laboriosam, nisi blanditiis qui quo illo 
+                soluta quod deleniti similique non pariatur 
+                in hic. Ullam.
+            </p>
+            <ul class="about_content">
+                <li class="about_box">
+                    <span class="material-symbols-outlined about_icon" style="font-size:4rem;">
+                        captive_portal
+                    </span>
+
+                    <p class="about_title"> Front-end </p>
+                    <p class="about_text"> HTML, CSS, JavaScript, TypeScript, React </p>
+                </li>
+
+                <li class="about_box">
+                    <span class="material-symbols-outlined about_icon" style="font-size:4rem;">
+                        devices
+                    </span>
+                    <p class="about_title"> Design </p>
+                    <p class="about_text"> Photoshop, Illust, Figma </p>
+                </li>
+
+                <li class="about_box">
+                    <span class="material-symbols-outlined about_icon" style="font-size:4rem;">
+                        group
+                    </span>
+                    <p class="about_title"> Web 관련 외 </p>
+                    <p class="about_text"> Marketing, Language, etc </p>
+                </li>
+            </ul>
+        </section>
+
+
+        <!-- Skills 시작 -->
+        <section id="skills" class="section_style">
+            <h2> My Skills </h2>
+            <p>
+                Lorem ipsum dolor sit amet consectetur 
+                adipisicing elit. In sint, officia 
+                nesciunt possimus accusantium quo. 
+                Laboriosam, nisi blanditiis qui quo illo 
+                soluta quod deleniti similique non pariatur 
+                in hic. Ullam.
+            </p>
+
+            <div class="skills_content">
+                <section class="skills_coding">
+                    <h3 class="skills_title"> Coding Skills (box 01) </h3>
+                    <ul>
+                        <li class="skills_bar"> 
+                            <div class="bar_text"> 
+                                <span> HTML5 </span> 
+                                <span> 98% </span>
+                            </div>
+                            <div class="bar_bg"> 
+                                <div  class="bar_value" style="width: 98%"> </div> 
+                            </div>
+                        </li>
+
+                        <li class="skills_bar"> 
+                            <div class="bar_text"> 
+                                <span> CSS3 </span> 
+                                <span> 90% </span>
+                            </div>
+                            <div class="bar_bg"> 
+                                <div  class="bar_value" style="width: 90%"> </div> 
+                            </div>
+                        </li>
+
+                        <li class="skills_bar"> 
+                            <div class="bar_text"> 
+                                <span> Javascript </span> 
+                                <span> 80% </span>
+                            </div>
+                            <div class="bar_bg"> 
+                                <div  class="bar_value" style="width: 80%"> </div> 
+                            </div>
+                        </li>
+                        <li class="skills_bar"> 
+                            <div class="bar_text"> 
+                                <span> React </span> 
+                                <span> 76% </span>
+                            </div>
+                            <div class="bar_bg"> 
+                                <div  class="bar_value" style="width: 76%"> </div> 
+                            </div>
+                        </li>
+                    </ul>
+                </section>
+
+                <section class="skills_tools">
+                    <h3 class="skills_title"> Design (box 02) </h3>
+                    <ul>
+                        <li class="bar_text_02"> Photoshop </li>
+                        <li class="bar_text_02"> Illust </li>
+                        <li class="bar_text_02"> Figma </li>
+                        <li class="bar_text_02"> Etc </li>
+                    </ul>
+                </section>
+
+                <section class="skills_etc">
+                    <h3 class="skills_title"> Etc (box 03) </h3>
+                    <ul>
+                        <li class="bar_text_02"> Piano </li>
+                        <li class="bar_text_02"> Sport </li>
+                        <li class="bar_text_02"> Running </li>
+                    </ul>
+                </section>
+            </div>
+        </section>
+
+
+
+
+
+        <!-- Work 시작 -->
+        <section id="work" class="section_style">
+            <h2 class="title"> My Work </h2>
+            <p class="description"> Projects </p>
+
+            <ul class="category">
+                <li> 
+                    <button class="category_button category_selected" data-category="all"> 
+                        All       
+                        <span class="work_count"> 
+                            8  
+                        </span> 
+                    </button> 
+                </li>
+                <li> 
+                    <button class="category_button" data-category="front-end"> 
+                        Front-end 
+                        <span class="work_count"> 3 </span> 
+                    </button> 
+                </li>
+                <li> 
+                    <button class="category_button" data-category="design"> 
+                        Design    
+                        <span class="work_count"> 3 </span>
+                    </button> 
+                </li>
+                <li> 
+                    <button class="category_button" data-category="mobile"> 
+                        Mobile    
+                        <span class="work_count"> 2 </span> 
+                    </button> 
+                </li>
+            </ul>
+
+            <ul class="project_all">
+                <li class="project" data-type="front-end">
+                    <a href="#" target="_blank">
+                        <img src="images/project_01.png" alt="project_01 이미지" class="project_img" />
+                        <div class="project_text">
+                            <h3 class="project_title"> Project #1 </h3>
+                            <p> My Work </p>
+                        </div> 
+                    </a>
+                </li>
+
+                <li class="project" data-type="front-end">
+                    <a href="#" target="_blank">
+                        <img src="images/project_02.png" alt="project_02 이미지" class="project_img" />
+                        <div class="project_text">
+                            <h3 class="project_title"> Project #2 </h3>
+                            <p> My Work </p>
+                        </div> 
+                    </a>
+                </li>
+
+                <li class="project" data-type="front-end">
+                    <a href="#" target="_blank">
+                        <img src="images/project_03.png" alt="project_03 이미지" class="project_img" />
+                        <div class="project_text">
+                            <h3 class="project_title"> Project #3 </h3>
+                            <p> My Work </p>
+                        </div> 
+                    </a>
+                </li>
+
+                <li class="project" data-type="design">
+                    <a href="#" target="_blank">
+                        <img src="images/project_04.png" alt="project_04 이미지" class="project_img" />
+                        <div class="project_text">
+                            <h3 class="project_title"> Project #4 </h3>
+                            <p> My Work </p>
+                        </div> 
+                    </a>
+                </li>
+
+                <li class="project" data-type="design">
+                    <a href="#" target="_blank">
+                        <img src="images/project_05.png" alt="project_05 이미지" class="project_img" />
+                        <div class="project_text">
+                            <h3 class="project_title"> Project #5 </h3>
+                            <p> My Work </p>
+                        </div> 
+                    </a>
+                </li>
+
+                <li class="project" data-type="design">
+                    <a href="#" target="_blank">
+                        <img src="images/project_06.png" alt="project_06 이미지" class="project_img" />
+                        <div class="project_text">
+                            <h3 class="project_title"> Project #6 </h3>
+                            <p> My Work </p>
+                        </div> 
+                    </a>
+                </li>
+
+                <li class="project" data-type="mobile">
+                    <a href="#" target="_blank">
+                        <img src="images/project_07.png" alt="project_07 이미지" class="project_img" />
+                        <div class="project_text">
+                            <h3 class="project_title"> Project #7 </h3>
+                            <p> My Work </p>
+                        </div> 
+                    </a>
+                </li>
+
+                <li class="project" data-type="mobile">
+                    <a href="#" target="_blank">
+                        <img src="images/project_08.png" alt="project_08 이미지" class="project_img" />
+                        <div class="project_text">
+                            <h3 class="project_title"> Project #8 </h3>
+                            <p> My Work </p>
+                        </div> 
+                    </a>
+                </li>
+            </ul>
+        </section>
+
+        <!-- Testimonials (테스티모니올스) 시작 -->
+        <section id="testimonial" class="section_style">
+            <h2 class="title"> Testimonial </h2>
+            <p class="description">
+                See What they say about me
+            </p>
+            <ul class="testimonial_all">
+                <li class="testimonial_each">
+                    <img src="images/people_01.png" width="150" alt="people_01" class="testimonial_img">
+                    <div class="testimonial_bubble">
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                            Ipsam quod sed aliquid molestiae nulla deleniti neque maxime placeat. 
+                            Facilis error quo non sit provident a quos dolore distinctio 
+                            sapiente nobis.
+                        </p>
+                        <p>
+                            <a href="#" class="testimonial_bubble_name"> James Kim </a>
+                            /Company_01
+                        </p>
+                    </div>
+                </li>
+
+                <li class="testimonial_each">
+                    <img src="images/people_02.png" width="150" alt="people_01" class="testimonial_img">
+                    <div class="testimonial_bubble">
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                            Ipsam quod sed aliquid molestiae nulla deleniti neque maxime placeat. 
+                            Facilis error quo non sit provident a quos dolore distinctio 
+                            sapiente nobis.
+                        </p>
+                        <p>
+                            <a href="#" class="testimonial_bubble_name"> Smith well </a>
+                            /Company_02
+                        </p>
+                    </div>
+                </li>
+
+                <li class="testimonial_each">
+                    <img src="images/people_03.png" width="150" alt="people_01" class="testimonial_img">
+                    <div class="testimonial_bubble">
+                        <p>
+                            Lorem ipsum dolor sit amet, consectetur adipisicing elit. 
+                            Ipsam quod sed aliquid molestiae nulla deleniti neque maxime placeat. 
+                            Facilis error quo non sit provident a quos dolore distinctio 
+                            sapiente nobis.
+                        </p>
+                        <p>
+                            <a href="#" class="testimonial_bubble_name"> Envi holoy </a>
+                            /Company_03
+                        </p>
+                    </div>
+                </li>
+            </ul>
+        </section>
+
+        <!-- TOP 버튼 (맨 위로 올리기) 시작 -->
+        <aside>
+            <a class="arrow_up" href="#home" title="top_button">
+                <span class="material-symbols-outlined" style="font-size: 2rem;">
+                    arrow_upward
+                </span>
+            </a>
+        </aside>
+
+    </main>
+    
+    <!-- footer 시작 -->
+    <footer id="contact" class="section_style">
+        <h2 class="title"> Contact </h2>
+        <p class="description">
+            My Portfolio 
+        </p>
+        <ul class="contact_all">
+            <li>
+                <div class="contact_text">
+                    zooclass@naver.com
+                </div>
+                <div class="contact_text">  
+                    010-1234-5678 
+                </div>
+            </li>
+        </ul>
+    </footer>
+
+
+
+</body>
+</html>
